# mcp_base

./: .cibuild.sh  .mcp-x86.c.swp  .travis.yml  CMakeLists.txt  LICENSE  README.md  fbuf.c  fbuf.h  mcg.c  mcp.c  mcp.h  mcp_internal.h  mcp_types.h
include/mcp_base/: fbuf.h  mcp.h
tests/: CMakeLists.txt  fbuf_test.c  mcg_test.c  mcp_test.c
